MDE-Project/src/iDevSParser.py
# Generated from grammar/iDevS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class iDevSParser ( Parser ):

    grammarFileName = "iDevS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'IntegrationSolution'", "'{'", "'}'", 
                     "'Infrastructure'", "'Launcher'", "'SecureHardware'", 
                     "'Compartment'", "'RootOfTrust'", "'SourceCode'", "'Services'", 
                     "'API'", "'Database'", "'Queue'", "'File'", "'Custom'", 
                     "'='", "'KeysExchange'", "'ProgramPublicKey'", "'ServicePublicKey'", 
                     "'Process'", "'uses'", "'['", "','", "']'", "'Step'", 
                     "'Read'", "'from'", "'Write'", "'to'", "'If'", "'For'", 
                     "'in'", "'Transform'", "'input='", "'operation='", 
                     "'output='", "'StoreLocalData'", "'RetrieveLocalData'", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "STRING", "NUMBER", "WS", "COMMENT" ]

    RULE_integrationSolution = 0
    RULE_infrastructure = 1
    RULE_launcher = 2
    RULE_secureHardware = 3
    RULE_compartment = 4
    RULE_rootOfTrust = 5
    RULE_sourceCode = 6
    RULE_services = 7
    RULE_service = 8
    RULE_attrPair = 9
    RULE_keysExchange = 10
    RULE_programKey = 11
    RULE_serviceKey = 12
    RULE_process = 13
    RULE_serviceRef = 14
    RULE_step = 15
    RULE_action = 16
    RULE_read = 17
    RULE_write = 18
    RULE_ifblock = 19
    RULE_forblock = 20
    RULE_transform = 21
    RULE_storeLocal = 22
    RULE_retrieveLocal = 23
    RULE_value = 24

    ruleNames =  [ "integrationSolution", "infrastructure", "launcher", 
                   "secureHardware", "compartment", "rootOfTrust", "sourceCode", 
                   "services", "service", "attrPair", "keysExchange", "programKey", 
                   "serviceKey", "process", "serviceRef", "step", "action", 
                   "read", "write", "ifblock", "forblock", "transform", 
                   "storeLocal", "retrieveLocal", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    ID=41
    STRING=42
    NUMBER=43
    WS=44
    COMMENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class IntegrationSolutionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def infrastructure(self):
            return self.getTypedRuleContext(iDevSParser.InfrastructureContext,0)


        def services(self):
            return self.getTypedRuleContext(iDevSParser.ServicesContext,0)


        def keysExchange(self):
            return self.getTypedRuleContext(iDevSParser.KeysExchangeContext,0)


        def process(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iDevSParser.ProcessContext)
            else:
                return self.getTypedRuleContext(iDevSParser.ProcessContext,i)


        def getRuleIndex(self):
            return iDevSParser.RULE_integrationSolution

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntegrationSolution" ):
                listener.enterIntegrationSolution(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntegrationSolution" ):
                listener.exitIntegrationSolution(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntegrationSolution" ):
                return visitor.visitIntegrationSolution(self)
            else:
                return visitor.visitChildren(self)




    def integrationSolution(self):

        localctx = iDevSParser.IntegrationSolutionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_integrationSolution)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(iDevSParser.T__0)
            self.state = 51
            self.match(iDevSParser.STRING)
            self.state = 52
            self.match(iDevSParser.T__1)
            self.state = 53
            self.infrastructure()
            self.state = 54
            self.services()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 55
                self.keysExchange()


            self.state = 59 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 58
                self.process()
                self.state = 61 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==20):
                    break

            self.state = 63
            self.match(iDevSParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InfrastructureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def launcher(self):
            return self.getTypedRuleContext(iDevSParser.LauncherContext,0)


        def secureHardware(self):
            return self.getTypedRuleContext(iDevSParser.SecureHardwareContext,0)


        def compartment(self):
            return self.getTypedRuleContext(iDevSParser.CompartmentContext,0)


        def rootOfTrust(self):
            return self.getTypedRuleContext(iDevSParser.RootOfTrustContext,0)


        def sourceCode(self):
            return self.getTypedRuleContext(iDevSParser.SourceCodeContext,0)


        def getRuleIndex(self):
            return iDevSParser.RULE_infrastructure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfrastructure" ):
                listener.enterInfrastructure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfrastructure" ):
                listener.exitInfrastructure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInfrastructure" ):
                return visitor.visitInfrastructure(self)
            else:
                return visitor.visitChildren(self)




    def infrastructure(self):

        localctx = iDevSParser.InfrastructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_infrastructure)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(iDevSParser.T__3)
            self.state = 66
            self.match(iDevSParser.T__1)
            self.state = 67
            self.launcher()
            self.state = 68
            self.secureHardware()
            self.state = 69
            self.compartment()
            self.state = 70
            self.rootOfTrust()
            self.state = 71
            self.sourceCode()
            self.state = 72
            self.match(iDevSParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LauncherContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def getRuleIndex(self):
            return iDevSParser.RULE_launcher

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLauncher" ):
                listener.enterLauncher(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLauncher" ):
                listener.exitLauncher(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLauncher" ):
                return visitor.visitLauncher(self)
            else:
                return visitor.visitChildren(self)




    def launcher(self):

        localctx = iDevSParser.LauncherContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_launcher)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(iDevSParser.T__4)
            self.state = 75
            self.match(iDevSParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SecureHardwareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def getRuleIndex(self):
            return iDevSParser.RULE_secureHardware

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSecureHardware" ):
                listener.enterSecureHardware(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSecureHardware" ):
                listener.exitSecureHardware(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSecureHardware" ):
                return visitor.visitSecureHardware(self)
            else:
                return visitor.visitChildren(self)




    def secureHardware(self):

        localctx = iDevSParser.SecureHardwareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_secureHardware)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(iDevSParser.T__5)
            self.state = 78
            self.match(iDevSParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompartmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def getRuleIndex(self):
            return iDevSParser.RULE_compartment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompartment" ):
                listener.enterCompartment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompartment" ):
                listener.exitCompartment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompartment" ):
                return visitor.visitCompartment(self)
            else:
                return visitor.visitChildren(self)




    def compartment(self):

        localctx = iDevSParser.CompartmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compartment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(iDevSParser.T__6)
            self.state = 81
            self.match(iDevSParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RootOfTrustContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def getRuleIndex(self):
            return iDevSParser.RULE_rootOfTrust

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRootOfTrust" ):
                listener.enterRootOfTrust(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRootOfTrust" ):
                listener.exitRootOfTrust(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRootOfTrust" ):
                return visitor.visitRootOfTrust(self)
            else:
                return visitor.visitChildren(self)




    def rootOfTrust(self):

        localctx = iDevSParser.RootOfTrustContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rootOfTrust)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(iDevSParser.T__7)
            self.state = 84
            self.match(iDevSParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SourceCodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def getRuleIndex(self):
            return iDevSParser.RULE_sourceCode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSourceCode" ):
                listener.enterSourceCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSourceCode" ):
                listener.exitSourceCode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSourceCode" ):
                return visitor.visitSourceCode(self)
            else:
                return visitor.visitChildren(self)




    def sourceCode(self):

        localctx = iDevSParser.SourceCodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sourceCode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(iDevSParser.T__8)
            self.state = 87
            self.match(iDevSParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServicesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def service(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iDevSParser.ServiceContext)
            else:
                return self.getTypedRuleContext(iDevSParser.ServiceContext,i)


        def getRuleIndex(self):
            return iDevSParser.RULE_services

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServices" ):
                listener.enterServices(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServices" ):
                listener.exitServices(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitServices" ):
                return visitor.visitServices(self)
            else:
                return visitor.visitChildren(self)




    def services(self):

        localctx = iDevSParser.ServicesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_services)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(iDevSParser.T__9)
            self.state = 90
            self.match(iDevSParser.T__1)
            self.state = 92 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 91
                self.service()
                self.state = 94 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 63488) != 0)):
                    break

            self.state = 96
            self.match(iDevSParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def attrPair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iDevSParser.AttrPairContext)
            else:
                return self.getTypedRuleContext(iDevSParser.AttrPairContext,i)


        def getRuleIndex(self):
            return iDevSParser.RULE_service

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterService" ):
                listener.enterService(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitService" ):
                listener.exitService(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitService" ):
                return visitor.visitService(self)
            else:
                return visitor.visitChildren(self)




    def service(self):

        localctx = iDevSParser.ServiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_service)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 63488) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 99
            self.match(iDevSParser.STRING)
            self.state = 100
            self.match(iDevSParser.T__1)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 101
                self.attrPair()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(iDevSParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrPairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(iDevSParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(iDevSParser.ValueContext,0)


        def getRuleIndex(self):
            return iDevSParser.RULE_attrPair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttrPair" ):
                listener.enterAttrPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttrPair" ):
                listener.exitAttrPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrPair" ):
                return visitor.visitAttrPair(self)
            else:
                return visitor.visitChildren(self)




    def attrPair(self):

        localctx = iDevSParser.AttrPairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attrPair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(iDevSParser.ID)
            self.state = 110
            self.match(iDevSParser.T__15)
            self.state = 111
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeysExchangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programKey(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iDevSParser.ProgramKeyContext)
            else:
                return self.getTypedRuleContext(iDevSParser.ProgramKeyContext,i)


        def serviceKey(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iDevSParser.ServiceKeyContext)
            else:
                return self.getTypedRuleContext(iDevSParser.ServiceKeyContext,i)


        def getRuleIndex(self):
            return iDevSParser.RULE_keysExchange

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeysExchange" ):
                listener.enterKeysExchange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeysExchange" ):
                listener.exitKeysExchange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeysExchange" ):
                return visitor.visitKeysExchange(self)
            else:
                return visitor.visitChildren(self)




    def keysExchange(self):

        localctx = iDevSParser.KeysExchangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_keysExchange)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(iDevSParser.T__16)
            self.state = 114
            self.match(iDevSParser.T__1)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 117
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [18]:
                    self.state = 115
                    self.programKey()
                    pass
                elif token in [19]:
                    self.state = 116
                    self.serviceKey()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==18 or _la==19):
                    break

            self.state = 121
            self.match(iDevSParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramKeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def getRuleIndex(self):
            return iDevSParser.RULE_programKey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramKey" ):
                listener.enterProgramKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramKey" ):
                listener.exitProgramKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramKey" ):
                return visitor.visitProgramKey(self)
            else:
                return visitor.visitChildren(self)




    def programKey(self):

        localctx = iDevSParser.ProgramKeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_programKey)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(iDevSParser.T__17)
            self.state = 124
            self.match(iDevSParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServiceKeyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def getRuleIndex(self):
            return iDevSParser.RULE_serviceKey

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServiceKey" ):
                listener.enterServiceKey(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServiceKey" ):
                listener.exitServiceKey(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitServiceKey" ):
                return visitor.visitServiceKey(self)
            else:
                return visitor.visitChildren(self)




    def serviceKey(self):

        localctx = iDevSParser.ServiceKeyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_serviceKey)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(iDevSParser.T__18)
            self.state = 127
            self.match(iDevSParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def serviceRef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iDevSParser.ServiceRefContext)
            else:
                return self.getTypedRuleContext(iDevSParser.ServiceRefContext,i)


        def step(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iDevSParser.StepContext)
            else:
                return self.getTypedRuleContext(iDevSParser.StepContext,i)


        def getRuleIndex(self):
            return iDevSParser.RULE_process

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcess" ):
                listener.enterProcess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcess" ):
                listener.exitProcess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcess" ):
                return visitor.visitProcess(self)
            else:
                return visitor.visitChildren(self)




    def process(self):

        localctx = iDevSParser.ProcessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_process)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(iDevSParser.T__19)
            self.state = 130
            self.match(iDevSParser.STRING)
            self.state = 131
            self.match(iDevSParser.T__1)
            self.state = 132
            self.match(iDevSParser.T__20)
            self.state = 133
            self.match(iDevSParser.T__21)
            self.state = 134
            self.serviceRef()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 135
                self.match(iDevSParser.T__22)
                self.state = 136
                self.serviceRef()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(iDevSParser.T__23)
            self.state = 144 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 143
                self.step()
                self.state = 146 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==25):
                    break

            self.state = 148
            self.match(iDevSParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServiceRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def ID(self):
            return self.getToken(iDevSParser.ID, 0)

        def getRuleIndex(self):
            return iDevSParser.RULE_serviceRef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServiceRef" ):
                listener.enterServiceRef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServiceRef" ):
                listener.exitServiceRef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitServiceRef" ):
                return visitor.visitServiceRef(self)
            else:
                return visitor.visitChildren(self)




    def serviceRef(self):

        localctx = iDevSParser.ServiceRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_serviceRef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            _la = self._input.LA(1)
            if not(_la==41 or _la==42):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(iDevSParser.STRING, 0)

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(iDevSParser.ActionContext)
            else:
                return self.getTypedRuleContext(iDevSParser.ActionContext,i)


        def getRuleIndex(self):
            return iDevSParser.RULE_step

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStep" ):
                listener.enterStep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStep" ):
                listener.exitStep(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStep" ):
                return visitor.visitStep(self)
            else:
                return visitor.visitChildren(self)




    def step(self):
